--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,31 @@
-alembic==0.8.6
-blinker==1.4
-dominate==2.2.0
+Babel==1.3
 Flask==0.10.1
-Flask-Bootstrap==3.3.5.7
-Flask-Mail==0.9.1
-Flask-Migrate==1.8.0
-Flask-Moment==0.5.1
-Flask-Script==2.0.5
-Flask-SQLAlchemy==2.1
-Flask-WTF==0.12
-itsdangerous==0.24
-Jinja2==2.8
-Mako==1.0.4
+Flask-Babel==0.9
+Flask-Login==0.3.0
+Flask-Mail==0.9.0
+Flask-OpenID==1.2.1
+Flask-SQLAlchemy==2.0
+Flask-WTF==0.10.2
+Flask-WhooshAlchemy==0.56
+Jinja2==2.7.3
 MarkupSafe==0.23
-python-editor==1.0
-SQLAlchemy==1.0.12
-visitor==0.1.2
-Werkzeug==0.11.8
-wheel==0.24.0
-WTForms==2.1
+SQLAlchemy==0.9.7
+Tempita==0.5.2
+WTForms==2.0.1
+Werkzeug==0.9.6
+Whoosh==2.6.0
+blinker==1.3
+coverage==3.7.1
+decorator==3.4.0
+flipflop==1.0
+guess-language==0.2
+gunicorn==19.1.1
+itsdangerous==0.24
+pbr==0.10.0
+psycopg2==2.5.4
+python-openid==2.2.5
+pytz==2014.7
+six==1.8.0
+speaklater==1.3
+sqlalchemy-migrate==0.9.2
+sqlparse==0.1.11
