--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ itsdangerous==0.24
 pbr==0.10.0
 python-openid==2.2.5
 pytz==2014.7
+psycopg2==2.6.1
 six==1.8.0
 speaklater==1.3
 sqlalchemy-migrate==0.9.2
